# acmers

./: AGENTS.md  Cargo.toml  README.md  TRACK.md  mise.toml
.github/workflows/: ci.yml  release.yml
debian/: acmers.1  acmers.service  acmers.timer  changelog  control  copyright  dirs  install  postinst  postrm  rules  watch
docs/: PROVIDERS.md
openspec/: config.yaml
openspec/changes/archive/2026-06-12-debian-packaging/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-12-fix-all-providers-to-match-acmesh/: change.md  tasks.md
openspec/changes/fix-all-providers-to-match-acmesh/: proposal.md
openspec/changes/implement-provider-stubs/: design.md  proposal.md  tasks.md
openspec/specs/: provider-implementation-pattern.md
openspec/specs/cross-compile-ci/: spec.md
openspec/specs/debian-packaging/: spec.md
openspec/specs/thread-local-test-base/: spec.md
scripts/: build-deb.sh
src/: base64.rs  cli.rs  config.rs  crypto.rs  error.rs  http.rs  json.rs  lib.rs  main.rs
src/acme/: account.rs  challenge.rs  directory.rs  mod.rs  order.rs
src/providers/: acmedns.rs  acmeproxy.rs  active24.rs  ad.rs  ali.rs  alviy.rs  anikeen.rs  anx.rs  area7.rs  artfiles.rs  aruba.rs  arvan.rs  aurora.rs  autodns.rs  aws.rs  azion.rs  azure.rs  baidu.rs  beget.rs  bh.rs  bhosted.rs  bookmyname.rs  bunny.rs  cf.rs  clouddns.rs  cloudns.rs  cn.rs  conoha.rs  constellix.rs  cpanel.rs  curanet.rs  cyon.rs  czechia.rs  da.rs  ddnss.rs  desec.rs  df.rs  dgon.rs  dnsexit.rs  dnshome.rs  (+163 more)
tests/: integration.rs  mock.rs  provider_construction.rs  provider_mock.rs
(+16 files in other folders)
